Bug 843417 - LMK will never kill the Musicplayer app. r=mchen, f=jlebar